# nsql

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  ERGONOMICS.md  LICENSE  PHASE3.md  README.md  THIRD-PARTY-LICENSES.md  cliff.toml  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: auto-release.yml  ci.yml  package-managers.yml  release.yml
assets/: inject.lua  nsql_init.lua
deb/: nsql-archive-keyring.asc
deb/conf/: distributions
deb/db/: checksums.db  contents.cache.db  packages.db  references.db  release.caches.db
deb/dists/stable/: InRelease  Release  Release.gpg
deb/dists/stable/main/binary-amd64/: Packages  Release
deb/pool/main/n/nsql/: nsql_0.1.11-1_amd64.deb  nsql_0.1.12-1_amd64.deb  nsql_0.1.13-1_amd64.deb  nsql_0.1.2-1_amd64.deb  nsql_0.1.3-1_amd64.deb  nsql_0.1.4-1_amd64.deb  nsql_0.1.5-1_amd64.deb  nsql_0.1.6-1_amd64.deb  nsql_0.1.7-1_amd64.deb  nsql_0.1.8-1_amd64.deb  nsql_0.1.9-1_amd64.deb
packaging/apt/: index.html
packaging/apt/conf/: distributions
packaging/aur/nsql/: PKGBUILD
packaging/aur/nsql-bin/: PKGBUILD
src/: cancel.rs  cli.rs  config.rs  creds.rs  db.rs  editor.rs  embed.rs  export.rs  favorites.rs  history.rs  introspect.rs  main.rs  pager.rs  params.rs  recents.rs  render.rs  repl.rs  secrets.rs  sql.rs  tunnel.rs  util.rs  watch.rs
src/backends/: duck.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs
src/embed/: grid.rs  keys.rs  mod.rs  results.rs  ring.rs  schema.rs  session.rs
tests/: smoke.rs
