[package]
name = "nsql"
version = "0.1.0"
edition = "2021"
description = "Run SQL from your terminal, composed in your real neovim — without taking over the screen."
license = "MIT OR Apache-2.0"
readme = "README.md"

[[bin]]
name = "nsql"
path = "src/main.rs"

[features]
default = ["keyring-store"]
# OS-keychain credential storage. Disable with --no-default-features if the
# secret-service/zbus stack is unavailable or you want a leaner build.
keyring-store = ["dep:keyring"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
comfy-table = "7"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
terminal_size = "0.4"
rpassword = "7"
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"], optional = true }

[profile.release]
strip = true
lto = "thin"
