[package]
name = "nsql"
version = "0.1.10"
edition = "2021"
# Floor set by rusqlite 0.40 / libsqlite3-sys 0.38 (cfg_select! in build.rs).
rust-version = "1.95"
description = "Run SQL from your terminal, composed in your real neovim — without taking over the screen."
license = "0BSD"
readme = "README.md"
repository = "https://github.com/fredrir/nsql"
homepage = "https://github.com/fredrir/nsql"
keywords = ["sql", "cli", "neovim", "database", "tui"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "nsql"
path = "src/main.rs"

[features]
default = ["keyring-store", "embed-editor", "mysql-backend"]
# MySQL/MariaDB support (one wire protocol covers both).
mysql-backend = ["dep:mysql"]
# DuckDB support. Opt-in: the bundled libduckdb C++ build is heavy.
duckdb-backend = ["dep:duckdb"]
# OS-keychain credential storage. Disable with --no-default-features if the
# secret-service/zbus stack is unavailable or you want a leaner build.
keyring-store = ["dep:keyring"]
# Zero-flash inline editor: drive `nvim --embed` over msgpack-RPC and render its
# grid into a ratatui inline viewport (never the alternate screen). Opt-in — the
# default build stays sync and lean; this pulls tokio/ratatui/nvim-rs.
embed-editor = ["dep:nvim-rs", "dep:tokio", "dep:ratatui", "dep:async-trait"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
comfy-table = "7"
rusqlite = { version = "0.40", features = ["bundled"] }
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-serde_json-1"] }
postgres-native-tls = "0.5"
native-tls = "0.2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
ctrlc = "3"
clap_complete = "4"
mysql = { version = "28", optional = true }
duckdb = { version = "1", features = ["bundled"], optional = true }
serde = { version = "1", features = ["derive"] }
# preserve_order: JSON output keeps query column order; arbitrary_precision:
# NUMERIC values survive --json without float rounding.
serde_json = { version = "1", features = ["preserve_order", "arbitrary_precision"] }
toml = "1"
directories = "6"
terminal_size = "0.4"
rpassword = "7"
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"], optional = true }

# embed-editor feature only:
nvim-rs = { version = "0.9", features = ["use_tokio"], optional = true }
tokio = { version = "1", features = ["rt", "macros", "io-util", "process", "net", "sync", "time"], optional = true }
ratatui = { version = "0.29", features = ["scrolling-regions"], optional = true }
async-trait = { version = "0.1", optional = true }

[profile.release]
strip = true
lto = "thin"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Debian packaging (cargo-deb). The binary is self-contained (lua assets are
# embedded via include_str!), so the package only ships the binary + docs.
# libdbus is a runtime dep of the default keyring-store feature; neovim is the
# expected-but-optional editor, hence Recommends rather than Depends.
[package.metadata.deb]
maintainer = "fredrir <fhansteen@gmail.com>"
section = "database"
priority = "optional"
depends = "$auto, libdbus-1-3"
recommends = "neovim"
license-file = ["LICENSE", "0"]
extended-description = """\
nsql runs SQL from your terminal, composed in your real Neovim, without taking \
over the screen or destroying scrollback. Supports SQLite, PostgreSQL, and \
MySQL/MariaDB, with schema-aware completion and OS-keychain credential storage."""
assets = [
    ["target/release/nsql", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/nsql/README.md", "644"],
    ["THIRD-PARTY-LICENSES.md", "usr/share/doc/nsql/THIRD-PARTY-LICENSES.md", "644"],
]
